// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with no expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      amount
    </div>
  </div>
  <div>
    <div
      className="list-item list-item--message"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`shoule render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      amount
    </div>
  </div>
  <div>
    <ExpenseListItem
      amount={1000}
      createdAt={0}
      description="rent"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={5000}
      createdAt={-259200000}
      description="coffee"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={3000}
      createdAt={259200000}
      description="dinner"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
